--- a/style.css
+++ b/style.css
@@ -7,27 +7,29 @@
 body {
   font-family: sans-serif;
 }
-
 .navbar {
   background: #131313;
   height: 80px;
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
   font-size: 1.2rem;
   position: sticky;
   top: 0;
   z-index: 999;
 }
 
-.nav_container {
+.navbar_container {
   display: flex;
   justify-content: space-between;
   height: 80px;
   z-index: 1;
   width: 100%;
-  margin: 0 auto;
-  padding: 0 50px;
+  max-width: 1300px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 #navbar_logo {
@@ -43,6 +45,10 @@ body {
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
+}
+
+.fa-gem {
+  margin-right: 0.5rem;
 }
 
 .navbar_menu {
@@ -65,13 +71,15 @@ body {
   padding: 0 1rem;
   height: 100%;
 }
-.nav_btn {
+
+.navbar_btn {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 1rem;
   width: 100%;
 }
+
 .button {
   display: flex;
   justify-content: center;
@@ -85,29 +93,4 @@ body {
   border-radius: 4px;
   background: #f77062;
   color: #fff;
-}
-.button:hover {
-  background: #4837ff;
-  transition: all 0.3s ease;
-}
-
-.navbar_links:hover {
-  color: #f77062;
-  transition: all 0.3s ease;
-}
-
-@media screen and (max-width: 960px) {
-  .navbar_container {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0;
-  }
-  .navbar_menu {
-    display: grid;
-    grid-template-columns: auto;
-  }
 }
